--- a/index.html
+++ b/index.html
@@ -388,3 +388,68 @@
     }
   });
 </script>
+
+     <script>
+document.addEventListener("DOMContentLoaded", () => {
+  const PASSWORD = "Asciendetualma333";
+  const ACCESS_KEY = "camino_access_date";
+
+  const accessScreen = document.getElementById("access-screen");
+  const expiredScreen = document.getElementById("expired-screen");
+  const mainContent = document.getElementById("main-content");
+  const input = document.getElementById("password");
+  const button = document.getElementById("enter-btn");
+  const error = document.getElementById("error");
+
+  function showContent() {
+    accessScreen.classList.add("hidden");
+    mainContent.classList.remove("hidden");
+  }
+
+  function showExpired() {
+    accessScreen.classList.add("hidden");
+    expiredScreen.classList.remove("hidden");
+  }
+
+  function checkPassword() {
+    const value = input.value.trim();
+    if (value === PASSWORD) {
+      const now = new Date();
+      localStorage.setItem(ACCESS_KEY, now.toISOString());
+      showContent();
+    } else {
+      error.textContent = "🌸 Ups, la clave no es correcta. Intentá nuevamente con amor 💜";
+      error.classList.add("fade-in");
+      setTimeout(() => error.classList.remove("fade-in"), 2500);
+    }
+  }
+
+  function logout() {
+    localStorage.removeItem(ACCESS_KEY);
+    location.reload();
+  }
+  window.logout = logout;
+
+  // ✅ Enter para ingresar
+  button.addEventListener("click", checkPassword);
+  input.addEventListener("keypress", e => {
+    if (e.key === "Enter") checkPassword();
+  });
+
+  // ✨ Borra mensaje al escribir de nuevo
+  input.addEventListener("input", () => {
+    error.classList.remove("fade-in");
+  });
+
+  // 🕒 Verificar si el acceso sigue vigente
+  const saved = localStorage.getItem(ACCESS_KEY);
+  if (saved) {
+    const firstAccess = new Date(saved);
+    const now = new Date();
+    const diffDays = (now - firstAccess) / (1000 * 60 * 60 * 24);
+    if (diffDays <= 30) showContent();
+    else showExpired();
+  }
+});
+</script>
+   
