--- a/index.html
+++ b/index.html
@@ -30,22 +30,21 @@
       background:
         radial-gradient(1200px 800px at 10% 5%, rgba(255,255,255,0.45), rgba(255,255,255,0) 60%),
         linear-gradient(135deg,
-          #b3e5fc 0%,    /* celeste suave */
-          #cbb3ff 40%,   /* violeta pastel */
-          #f7c3e3 65%,   /* rosa coral */
-          #ffb980 100%   /* naranja cálido atardecer */
+          #b3e5fc 0%,    
+          #cbb3ff 40%,   
+          #f7c3e3 65%,   
+          #ffb980 100%   
         );
       background-attachment: fixed;
       position: relative;
     }
 
-    /* Fondo SVG embebido */
     body::before {
       content: "";
       position: fixed;
       inset: 0;
       pointer-events: none;
-      background-image: url('data:image/svg+xml;utf8,<?xml version="1.0" encoding="UTF-8"?> <svg xmlns="http://www.w3.org/2000/svg" width="800" height="600" viewBox="0 0 800 600"> <defs> <linearGradient id="sunset" x1="0" y1="0" x2="1" y2="1"> <stop offset="0%" stop-color="%23b3e5fc" stop-opacity="0.5"/> <stop offset="40%" stop-color="%23cbb3ff" stop-opacity="0.4"/> <stop offset="75%" stop-color="%23f7c3e3" stop-opacity="0.35"/> <stop offset="100%" stop-color="%23ffb980" stop-opacity="0.3"/> </linearGradient> </defs> <rect width="800" height="600" fill="url(%23sunset)"/> <g opacity="0.35" transform="translate(560,420)"> <path d='M10 160 C 40 90, 50 40, 60 0' stroke='%237D5BA6' stroke-width='2' fill='none' /> <g fill='%23A88BD9'> <circle cx='60' cy='0' r='5'/> <circle cx='52' cy='22' r='4'/> <circle cx='44' cy='40' r='3.5'/> <circle cx='36' cy='58' r='3.5'/> <circle cx='28' cy='78' r='3.2'/> <circle cx='20' cy='98' r='3'/> <circle cx='12' cy='120' r='2.8'/> </g> </g> <g opacity='0.18'> <circle cx='90' cy='120' r='10' fill='%23ffd7c5'/> <circle cx='160' cy='80' r='6' fill='%23e0bfff'/> <circle cx='240' cy='160' r='8' fill='%23ffccd6'/> <circle cx='320' cy='60' r='7' fill='%23d4b9ff'/> <circle cx='520' cy='200' r='9' fill='%23ffcaa8'/> <circle cx='700' cy='100' r='7' fill='%23e0bfff'/> </g> <g transform='translate(390,220) rotate(-5)' opacity='0.35'> <path d='M0 0 C -40 -25, -80 -35, -110 -5 C -60 -3, -20 15, 0 0' fill='%23a592ff'/> <path d='M0 0 C 30 -25, 60 -40, 90 -15 C 45 -10, 15 5, 0 0' fill='%23f8b0a5'/> <ellipse cx='12' cy='8' rx='16' ry='9' fill='%238e73c5'/> <path d='M28,8 L58,6' stroke='%236e54a6' stroke-width='2'/> <path d='M10,20 C 5,40 -10,50 -20,55' stroke='%23a592ff' stroke-width='3' fill='none'/> </g> <g opacity='0.18'> <circle cx='640' cy='360' r='3' fill='%23ffffff'/> <circle cx='610' cy='340' r='2.5' fill='%23ffffff'/> <circle cx='620' cy='380' r='2.5' fill='%23ffffff'/> <circle cx='120' cy='300' r='2.5' fill='%23ffffff'/> <circle cx='200' cy='420' r='2.5' fill='%23ffffff'/> </g> </svg>');
+      background-image: url('data:image/svg+xml;utf8,<?xml version="1.0" encoding="UTF-8"?> <svg xmlns="http://www.w3.org/2000/svg" width="800" height="600" viewBox="0 0 800 600"> <defs> <linearGradient id="sunset" x1="0" y1="0" x2="1" y2="1"> <stop offset="0%" stop-color="%23b3e5fc" stop-opacity="0.5"/> <stop offset="40%" stop-color="%23cbb3ff" stop-opacity="0.4"/> <stop offset="75%" stop-color="%23f7c3e3" stop-opacity="0.35"/> <stop offset="100%" stop-color="%23ffb980" stop-opacity="0.3"/> </linearGradient> </defs> <rect width="800" height="600" fill="url(%23sunset)"/> </svg>');
       background-repeat: repeat;
       background-size: 800px auto;
       opacity: 0.35;
@@ -251,7 +250,7 @@
     <h2>Bienvenidas a Camino hacia mi Centro 🦋</h2>
     <p>Por favor, ingresa la contraseña para acceder al contenido:</p>
     <input type="password" id="password" placeholder="Contraseña">
-    <button onclick="checkPassword()">Entrar</button>
+    <button id="enter-btn">Entrar</button>
     <p id="error" class="error hidden">Contraseña incorrecta</p>
   </div>
 
@@ -323,69 +322,82 @@
         <h2>Descargables</h2>
         <p>Aquí podrás acceder a material adicional: PDF, playlists y guías prácticas para acompañar tu experiencia.</p>
         <div class="card-grid">
-          <a class="card" href="#" target="_blank" rel="
+          <div class="card">Guía práctica — próximamente 💫</div>
+        </div>
+      </section>
 
-    <script>
-document.addEventListener("DOMContentLoaded", () => {
-  const PASSWORD = "Asciendetualma333";
-  const ACCESS_KEY = "camino_access_date";
+      <div class="logout-container">
+        <button class="logout-btn" onclick="logout()">Cerrar sesión</button>
+      </div>
+    </main>
 
-  const accessScreen = document.getElementById("access-screen");
-  const expiredScreen = document.getElementById("expired-screen");
-  const mainContent = document.getElementById("main-content");
-  const input = document.getElementById("password");
-  const button = document.getElementById("enter-btn");
-  const error = document.getElementById("error");
+    <footer>
+      <p>🌸 Camino hacia mi Centro — Con amor, Chechu 🦋✨</p>
+    </footer>
+  </div>
 
-  function showContent() {
-    accessScreen.classList.add("hidden");
-    mainContent.classList.remove("hidden");
-  }
+  <script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const PASSWORD = "Asciendetualma333";
+    const ACCESS_KEY = "camino_access_date";
 
-  function showExpired() {
-    accessScreen.classList.add("hidden");
-    expiredScreen.classList.remove("hidden");
-  }
+    const accessScreen = document.getElementById("access-screen");
+    const expiredScreen = document.getElementById("expired-screen");
+    const mainContent = document.getElementById("main-content");
+    const input = document.getElementById("password");
+    const button = document.getElementById("enter-btn");
+    const error = document.getElementById("error");
 
-  function checkPassword() {
-    const value = input.value.trim();
-    if (value === PASSWORD) {
-      const now = new Date();
-      localStorage.setItem(ACCESS_KEY, now.toISOString());
-      showContent();
-    } else {
-      error.textContent = "🌸 Ups, la clave no es correcta. Intentá nuevamente con amor 💜";
-      error.classList.add("fade-in");
-      setTimeout(() => error.classList.remove("fade-in"), 2500);
+    function showContent() {
+      accessScreen.classList.add("hidden");
+      mainContent.classList.remove("hidden");
     }
-  }
 
-  function logout() {
-    localStorage.removeItem(ACCESS_KEY);
-    location.reload();
-  }
-  window.logout = logout;
+    function showExpired() {
+      accessScreen.classList.add("hidden");
+      expiredScreen.classList.remove("hidden");
+    }
 
-  // ✅ Enter para ingresar
-  button.addEventListener("click", checkPassword);
-  input.addEventListener("keypress", e => {
-    if (e.key === "Enter") checkPassword();
+    function checkPassword() {
+      const value = input.value.trim();
+      if (value === PASSWORD) {
+        const now = new Date();
+        localStorage.setItem(ACCESS_KEY, now.toISOString());
+        showContent();
+      } else {
+        error.textContent = "🌸 Ups, la clave no es correcta. Intentá nuevamente con amor 💜";
+        error.classList.remove("hidden");
+        error.classList.add("fade-in");
+        setTimeout(() => error.classList.remove("fade-in"), 2500);
+      }
+    }
+
+    function logout() {
+      localStorage.removeItem(ACCESS_KEY);
+      location.reload();
+    }
+    window.logout = logout;
+
+    // ✅ Botón y Enter para ingresar
+    button.addEventListener("click", checkPassword);
+    input.addEventListener("keypress", e => {
+      if (e.key === "Enter") checkPassword();
+    });
+
+    input.addEventListener("input", () => {
+      error.classList.add("hidden");
+    });
+
+    // 🕒 Control de acceso (30 días)
+    const saved = localStorage.getItem(ACCESS_KEY);
+    if (saved) {
+      const firstAccess = new Date(saved);
+      const now = new Date();
+      const diffDays = (now - firstAccess) / (1000 * 60 * 60 * 24);
+      if (diffDays <= 30) showContent();
+      else showExpired();
+    }
   });
-
-  // ✨ Borra mensaje al escribir de nuevo
-  input.addEventListener("input", () => {
-    error.classList.remove("fade-in");
-  });
-
-  // 🕒 Verificar si el acceso sigue vigente
-  const saved = localStorage.getItem(ACCESS_KEY);
-  if (saved) {
-    const firstAccess = new Date(saved);
-    const now = new Date();
-    const diffDays = (now - firstAccess) / (1000 * 60 * 60 * 24);
-    if (diffDays <= 30) showContent();
-    else showExpired();
-  }
-});
-</script>
-
+  </script>
+</body>
+</html>
