--- a/chispa_site/index.html
+++ b/chispa_site/index.html
@@ -64,7 +64,7 @@
       <h3>Inversión</h3>
       <p class="price">$11.000 ARS <span class="small">(precio lanzamiento)</span></p>
       <p class="note">Al confirmar tu compra, recibís el acceso y la contraseña al Área de Curso.</p>
-      <p><a class="btn" href="https://tu-link-de-pago.com" target="_blank" rel="noopener">Comprar ahora</a></p>
+      <p><a class="btn" href="https://mpago.li/2DwgsPv" target="_blank" rel="noopener">Comprar ahora</a></p>
       <p class="small">¿Problemas con el pago? Escribime a <strong>hola@caminohaciamicentro.com</strong></p>
     </section>
 
